fix: Image thumbnails on main page don't follow the same style as live (horizontal, rounded corners) Blog titles and category on main page does not match styling (blog), Missing graphical elements in the section bg of the what we do section, spacing is different (home), Section bg graphic is positioned differently in the new site (retail solution)

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -369,3 +369,14 @@
     }
   }
 }
+
+.home-page__retail, .home-page__sports{
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+}
+
+.home-page__products .row_col_wrap_12 {
+	gap:10px;
+	flex-wrap: nowrap !important
+}
